fixed pipeline schema name for read and write